<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="341dp"
        android:layout_height="492dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/Sc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Vtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_titulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Vdescripcion"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/app_descripcion"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/VNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_nombre"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Vcalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_calle"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtcalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Wnumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_numerodedomicilio"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtnumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="number" />

            <TextView
                android:id="@+id/Vcolonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_colonia"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtcolonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Vmunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_municipio"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtmunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Vestado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_Estado"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtestado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Vcompania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_compania"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtcompania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Vvelocidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_velocidaddeconexion"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtvelocidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Vhora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_hora"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txthora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Vfecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_fecha"
                android:textColor="#232121"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtfecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Vnumerodedispositios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_numerodedispositivos"
                android:textColor="#232121"
                android:textSize="20sp"
                app:autoSizeTextType="none" />/>

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbcinco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_ndcinco" />

                <RadioButton
                    android:id="@+id/rbdiez"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_nddiez" />

                <RadioButton
                    android:id="@+id/rbquince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_ndquince" />

                <RadioButton
                    android:id="@+id/rbmas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_ndmas" />
            </RadioGroup>

            <EditText
                android:id="@+id/txtnumerodedispositivos"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/Vtipodedispositios"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_tiposdedispositivos"
                android:textColor="#232121"
                android:textSize="20sp"
                android:justificationMode="inter_word" />/>

            <CheckBox
                android:id="@+id/cbtabletas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_tabletas" />

            <CheckBox
                android:id="@+id/cbcelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_celulares" />

            <CheckBox
                android:id="@+id/cbcomputadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_computadoras" />

            <CheckBox
                android:id="@+id/cbtelevision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_television" />

            <CheckBox
                android:id="@+id/cbotros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_otros" />

            <EditText
                android:id="@+id/txtotros"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:baselineAligned="false"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txttipodedispositivos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/app_respuesta"
                android:inputType="textPersonName"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="registrarmedicion"
                android:text="@string/app_botton" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>